// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build all 1`] = `undefined`;

exports[`build > build base 1`] = `undefined`;

exports[`build > build base change default selector case  > index 1`] = `
"page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base change default selector case  > legacy 1`] = `
"page {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}"
`;

exports[`build > build base with custom types 1`] = `undefined`;

exports[`build > build nothing 1`] = `undefined`;

exports[`build > hash map init buildBase 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 2`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildBase 3`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "30aa6dc1f6fa1d88409017e28c41427e7dc0ad17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildComponents 2 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "30aa6dc1f6fa1d88409017e28c41427e7dc0ad17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildComponents diff 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "30aa6dc1f6fa1d88409017e28c41427e7dc0ad17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents0.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.alert",
    {
      "value": "65ef82f2ca3287de8ceb21f5e767d9a62f30a79a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.alert",
    {
      "value": "0efe46defc81358bdd995b91d23ad6ef7696c513",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.avatar",
    {
      "value": "861f688a90cf510725213447ff54f7624feb2f86",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.badge",
    {
      "value": "8a4d7d22778e9647fe32742c80128aa5d3fd0adf",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.button",
    {
      "value": "8df77c5f2cd1c7402f18a3e1470220305ae10a02",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.chat",
    {
      "value": "cc5c63c5dddb6623d5753ef7f0f6c7ba18c80aa5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.checkbox",
    {
      "value": "0cfccd73704548984554ac5019e2c884ac71963d",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.input",
    {
      "value": "4453f552f5fefc2624bbf86639294c41c05fa949",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.link",
    {
      "value": "d5353c68230bab489db664b361cda8cb7cf566b3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.progress",
    {
      "value": "f6c060961d68afb65b2007196d08e8707156943c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.radio",
    {
      "value": "51133ad112357b3d86dca086e12110528b7f0b97",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.range",
    {
      "value": "30ce7fb1deda000ac1d550399f9646c0f3d881d7",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.select",
    {
      "value": "a733ac9e35edbeb70aed95282c994baa774b0047",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.textarea",
    {
      "value": "220214c65d5198e91c2b8a7f3ad295858246f8e9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.toggle",
    {
      "value": "59266e2c8ddf4981e37fc6e62db1e735002425ea",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.loading",
    {
      "value": "b52f4ae882a2e369c0f108de061445f619ceacb8",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.mask",
    {
      "value": "9d0b9ebb70a3b9962e9422a55d5e26efb38975c9",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.table",
    {
      "value": "745e17df73d34dc10e225c4d6870db50b265b8df",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.skeleton",
    {
      "value": "bf486bfe64a4abe356c111c56dae88ec95849554",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.form",
    {
      "value": "0777405a4c977d0d86dfd3249a52468d1bf29d0f",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.radial-progress",
    {
      "value": "0efd193c94352131eb534730ccffca8885881081",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.countdown",
    {
      "value": "ace9933e5112cbcf253401a8f845e50967b7d8a3",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.diff",
    {
      "value": "cf9ea49fb0b3005d549796ce1d7264c6e407270b",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.kbd",
    {
      "value": "620cdc40a5519697452e61af89d9025554b0fe35",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.tooltip",
    {
      "value": "dc76b7f66635c975cee902fa9385f5646a82217e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.toast",
    {
      "value": "96f42ae624c28c9c2090ec1181789df6a719d171",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.steps",
    {
      "value": "da3bdf1c3590344ea9db6dd809a1c1e01f05dd5e",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.collapse",
    {
      "value": "8dedeb648ac0ddc34706a1a43e384baca234b22c",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.join",
    {
      "value": "f21ceb5069cd31e8b80a4ef2636ed6e223ce8c33",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.indicator",
    {
      "value": "60d011a757abdb03bd1dbdc3eba1b2c9d03137ef",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.divider",
    {
      "value": "70c8510ea9714cc940c12d96a5feccc9668eff17",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.stack",
    {
      "value": "27f8ed137f7060c8ffa6ccc1b655c6ebb7c7e4ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.tab",
    {
      "value": "581076aed45f247d693de1c065a5032ed0a663e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.dropdown",
    {
      "value": "7cb3667b2b72f1a38305a9f828870ab4081e761a",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.swap",
    {
      "value": "942fc1c5351d7e4580cec40be58ad896beb3d7ac",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.card",
    {
      "value": "da81637aaad73622959736c7bb93719f3c685b40",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.carousel",
    {
      "value": "f4d7a435a0d6ebc5237992e790897c8f86362dcd",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.stat",
    {
      "value": "04d834f733220970f014176462b848f548837258",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.timeline",
    {
      "value": "c3156fb43eeb43369af6d019ba3226ecf6d26de1",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.breadcrumbs",
    {
      "value": "5dd2678aaddd321be00d0bc7b1a0200762040921",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.bottom-navigation",
    {
      "value": "42d1fac0c9a23c74b41370aa6a64f7179fbcec30",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.menu",
    {
      "value": "4dd9b50c134fb5dbce505b5c5a36d58b1bce7485",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.navbar",
    {
      "value": "60a186ff344b9092e4c96cdec663caf13a95d811",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.file-input",
    {
      "value": "c6d3ca0f4d914e5d6cfa98f2a849b501606161eb",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.rating",
    {
      "value": "c22938c561e16f6a5141b5c5b054ce80236a7958",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.drawer",
    {
      "value": "01d868b49cbab384a1239d5e721533ca355cb3e5",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.footer",
    {
      "value": "aed2c8743928868587598265ab81c6a3f87ed626",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#components.hero",
    {
      "value": "d27ff8f3a4e9d3344b0aa36ad9d6604d9523c747",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/buildComponents1.cjs#types",
    {
      "value": "f872d8a706e1b2324558867e5d177de9b8c2cd09",
    },
  ],
]
`;

exports[`build > hash map init buildUtilities 1`] = `
[
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/icestack.config.cjs#base",
    {
      "value": "111be6761208e1255ba6f69b344e83a2417fb445",
    },
  ],
  [
    "/Users/icebreaker/Documents/GitHub/icestack/packages/core/test/configs/a.config.cjs#utilities",
    {
      "value": "30aa6dc1f6fa1d88409017e28c41427e7dc0ad17",
    },
  ],
]
`;
